<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="fragment_change_mail"
    tools:context=".controller.appsettings.FragmentChangeMailController">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-28dp"
        app:cardBackgroundColor="@color/background2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_e_mail"
                android:textStyle="bold"
                android:alpha="0.7"
                android:textSize="24sp"
                android:paddingBottom="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_e_mail"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:alpha="0.7"/>

            <EditText
                android:id="@+id/currentMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_e_mail"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:alpha="0.7"/>

            <EditText
                android:id="@+id/newMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_e_mail"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:alpha="0.7"/>

            <EditText
                android:id="@+id/confirmNewMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="28dp">

                <Button
                    android:id="@+id/cancelChangeMail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:drawableLeft="@drawable/go_back_icon_small"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:layout_marginEnd="10dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/saveChangeMail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:drawableLeft="@drawable/save_icon"
                    android:layout_weight="1"
                    android:backgroundTint="@color/primary"
                    android:layout_marginLeft="10dp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>