...
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/contentFragmentMainScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/mainCardView"
            android:layout_below="@+id/mainScreenTop" />


...
