<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.cleanings.FragmentCleaningPlanAddController"
    android:tag="fragment_cleaning_plan_add">

    <EditText
        android:id="@+id/enterNameAddCleaningPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/name_of_cleaning_plan"
        android:visibility="visible" />

    <EditText
        android:id="@+id/enterDescriptionCleaningPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterNameAddCleaningPlan"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_description_here"
        android:inputType="textMultiLine"
        android:maxLines="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePickerCleaningPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterDescriptionCleaningPlan"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/select_date_range"
        android:textColor="@color/black"
        app:icon="@drawable/calender_icon"
        app:iconTint="@color/black"/>

    <Spinner
        android:id="@+id/chooseInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePickerCleaningPlan"
        android:background="@null"
        android:spinnerMode="dropdown"
        android:paddingBottom="15dp"/>


</RelativeLayout>