<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="fragment_cleaning_plan"
    tools:context=".controller.cleanings.FragmentCleaningPlanController">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-28dp"
        app:cardCornerRadius="28dp"
        app:cardBackgroundColor="@color/background2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp">

                <RelativeLayout
                    android:id="@+id/headerCleaningPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/goBackCleaningPlan"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="7sp"
                        android:src="@drawable/go_back_icon"
                        android:layout_alignParentStart="true"
                        android:visibility="invisible"
                        android:layout_marginEnd="10dp"
                        app:tint="@color/secondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:paddingBottom="20dp"
                        android:text="@string/cleaning_plan"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/addCleaningPlan"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="7sp"
                        android:src="@drawable/add_symbol_blue"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:visibility="visible"
                        app:tint="@color/primary"/>

                    <ImageView
                        android:id="@+id/saveCleaningPlan"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="7sp"
                        android:src="@drawable/save_icon"
                        android:layout_alignParentEnd="true"
                        android:visibility="invisible"
                        android:layout_marginEnd="10dp"
                        app:tint="@color/primary"/>


                </RelativeLayout>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/contentFragmentCleaningPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/headerCleaningPlan"
                    android:layout_marginBottom="10dp"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>