...
    <string name="removed">"Removed: "</string>
    <string name="added">"Added "</string>
    <string name="enter_an_itemDot">Enter an item.</string>
    <string name="edit">Edit</string>
    <string name="enter_new_e_mail">Enter new e-mail</string>
    <string name="confirm_new_e_mail">Confirm new e-mail</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="current_e_mail">Current e-mail</string>
    <string name="current_password">Current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="grocerylist">Grocery List</string>
...
    <string name="enter_shorter_reason">Please enter shorter reason</string>
    <string name="select_users">Please select user(s)</string>
    <string name="enter_description_for_cleaning_plan">Please enter a description</string>
    <string name="enter_shorter_description">Please enter shorter description</string>
    <string name="no_past_date_allowed">No past date(s) allowed</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">Bi-weekly</string>
    <string name="monthly">Monthly</string>
    <string name="bi_monthly">Bi-monthly</string>
    <string name="half_yearly">Half-yearly</string>
    <string name="please_select_valid_date_range">Please select a valid date range</string>
    <string name="enter_valid_first_name">Please enter valid first name</string>
    <string name="enter_valid_last_name">Please enter valid last name\n</string>
...
